# span

./: README.md  scan.cabal  span.cabal  stack.yaml  test.txt
app/: Main.hs
src/: B1Matrix.hs  BMatrix.hs  CMatrix.hs  HierarchicalClustering.hs  NewmanGirvan.hs  Print.hs  Types.hs  Utility.hs
