name:                span
version:             0.1.0.0
synopsis:            Implement the SPAN algorithm for spectral clustering
description:         Please see README.md
homepage:            http://github.com/GregorySchwartz/span#readme
license:             GPL-3
license-file:        LICENSE
author:              Gregory W. Schwartz
maintainer:          gregory.schwartz@drexel.edu
copyright:           Copyright 2017 Gregory W. Schwartz
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Utility
                     , B1Matrix
                     , BMatrix
                     , CMatrix
                     , NewmanGirvan
                     , HierarchicalClustering
                     , Print
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , vector
                     , inline-r
                     , tree-fun
                     , text-show
                     , parallel
  ghc-options:         -O2
  default-language:    Haskell2010

executable span
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , span
                     , optparse-applicative
                     , containers
                     , vector
                     , text
                     , inline-r
                     , pipes
                     , pipes-text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GregorySchwartz/span
